{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 2343,
  "lineage": "3ecc441a-2924-2978-6dd1-be34c2ff39fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ApiInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:104689598512:instance/i-0c0a618cce5463bb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "read-s3-role-v2x",
            "id": "i-0c0a618cce5463bb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "klivus",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0200bd16185f30ca1",
            "private_dns": "ip-10-0-1-254.ec2.internal",
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-44-203-111-178.compute-1.amazonaws.com",
            "public_ip": "44.203.111.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002a9418c9135b822",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75f63ae13c0d5d4",
            "tags": {
              "Name": "master-instance-api-Klivus"
            },
            "tags_all": {
              "Name": "master-instance-api-Klivus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01118a1f98b80eb36"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.readS3role",
            "aws_security_group.AppSecurityGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC",
            "data.template_file.init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SiteInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:104689598512:instance/i-095c0724b13c6523a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "read-s3-role-v2x",
            "id": "i-095c0724b13c6523a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "klivus",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b35a26604346f6ab",
            "private_dns": "ip-10-0-1-42.ec2.internal",
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-34-207-69-142.compute-1.amazonaws.com",
            "public_ip": "34.207.69.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dabbad08815091aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75f63ae13c0d5d4",
            "tags": {
              "Name": "master-instance-site-Klivus"
            },
            "tags_all": {
              "Name": "master-instance-site-Klivus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01118a1f98b80eb36"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.readS3role",
            "aws_security_group.AppSecurityGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC",
            "data.template_file.initSite"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SolutiInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:104689598512:instance/i-0a11edd5f7256e13f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "read-s3-role-v2x",
            "id": "i-0a11edd5f7256e13f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "klivus",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d0b7198dba2ec71",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-35-170-243-70.compute-1.amazonaws.com",
            "public_ip": "35.170.243.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e70f15427a146d16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75f63ae13c0d5d4",
            "tags": {
              "Name": "master-instance-soluti-Klivus"
            },
            "tags_all": {
              "Name": "master-instance-soluti-Klivus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01118a1f98b80eb36"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.readS3role",
            "aws_security_group.AppSecurityGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC",
            "data.template_file.initSoluti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AppGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:internet-gateway/igw-0b25a6639c6fbc5d7",
            "id": "igw-0b25a6639c6fbc5d7",
            "owner_id": "104689598512",
            "tags": {
              "Name": "ig-Klivus"
            },
            "tags_all": {
              "Name": "ig-Klivus"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ApiLoadBalance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/api-lb-app-Klivus/e4868f0fd2c9628c",
            "arn_suffix": "app/api-lb-app-Klivus/e4868f0fd2c9628c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "api-lb-app-Klivus-908765993.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/api-lb-app-Klivus/e4868f0fd2c9628c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-lb-app-Klivus",
            "security_groups": [
              "sg-05881c78e09850d15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00375fb7819aecc3f"
              },
              {
                "subnet_id": "subnet-075c9ebe76ee485e7"
              },
              {
                "subnet_id": "subnet-0b75f63ae13c0d5d4"
              },
              {
                "subnet_id": "subnet-0fb114f75c797da55"
              }
            ],
            "subnets": [
              "subnet-00375fb7819aecc3f",
              "subnet-075c9ebe76ee485e7",
              "subnet-0b75f63ae13c0d5d4",
              "subnet-0fb114f75c797da55"
            ],
            "tags": {
              "Environment": "lb-api-Klivus"
            },
            "tags_all": {
              "Environment": "lb-api-Klivus"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ApiLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "SiteLoadBalance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/site-lb-app-Klivus/ec3da5b671bad324",
            "arn_suffix": "app/site-lb-app-Klivus/ec3da5b671bad324",
            "desync_mitigation_mode": "defensive",
            "dns_name": "site-lb-app-Klivus-646334912.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/site-lb-app-Klivus/ec3da5b671bad324",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "site-lb-app-Klivus",
            "security_groups": [
              "sg-01353fb63eb3e730a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00375fb7819aecc3f"
              },
              {
                "subnet_id": "subnet-075c9ebe76ee485e7"
              },
              {
                "subnet_id": "subnet-0b75f63ae13c0d5d4"
              },
              {
                "subnet_id": "subnet-0fb114f75c797da55"
              }
            ],
            "subnets": [
              "subnet-00375fb7819aecc3f",
              "subnet-075c9ebe76ee485e7",
              "subnet-0b75f63ae13c0d5d4",
              "subnet-0fb114f75c797da55"
            ],
            "tags": {
              "Environment": "lb-app-Klivus"
            },
            "tags_all": {
              "Environment": "lb-app-Klivus"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.SiteLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "SolutiLoadBalance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/soluti-lb-app-Klivus/a0097337bb314a9c",
            "arn_suffix": "app/soluti-lb-app-Klivus/a0097337bb314a9c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "soluti-lb-app-Klivus-488648970.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/soluti-lb-app-Klivus/a0097337bb314a9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "soluti-lb-app-Klivus",
            "security_groups": [
              "sg-03e08bccd2440f1b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00375fb7819aecc3f"
              },
              {
                "subnet_id": "subnet-075c9ebe76ee485e7"
              },
              {
                "subnet_id": "subnet-0b75f63ae13c0d5d4"
              },
              {
                "subnet_id": "subnet-0fb114f75c797da55"
              }
            ],
            "subnets": [
              "subnet-00375fb7819aecc3f",
              "subnet-075c9ebe76ee485e7",
              "subnet-0b75f63ae13c0d5d4",
              "subnet-0fb114f75c797da55"
            ],
            "tags": {
              "Environment": "lb-app-Klivus"
            },
            "tags_all": {
              "Environment": "lb-app-Klivus"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.SolutiLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ApiListenerLB_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/api-lb-app-Klivus/e4868f0fd2c9628c/016ee7e758886f6d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/api-lb-target-group-3000/5a55e2647860002d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/api-lb-app-Klivus/e4868f0fd2c9628c/016ee7e758886f6d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/api-lb-app-Klivus/e4868f0fd2c9628c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ApiLoadBalance",
            "aws_lb_target_group.ApiLBTargetGroup",
            "aws_security_group.ApiLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "SiteListenerLB_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/site-lb-app-Klivus/ec3da5b671bad324/87d44df838f89066",
            "certificate_arn": "arn:aws:acm:us-east-1:104689598512:certificate/7229ee05-b031-4956-ab81-44937ff21785",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/site-lb-target-group-3001/8e71312d0e505b0f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/site-lb-app-Klivus/ec3da5b671bad324/87d44df838f89066",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/site-lb-app-Klivus/ec3da5b671bad324",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.SiteLoadBalance",
            "aws_lb_target_group.SiteLBTargetGroup",
            "aws_security_group.SiteLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "SiteListenerLB_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/site-lb-app-Klivus/ec3da5b671bad324/85183966fbd2b339",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/site-lb-app-Klivus/ec3da5b671bad324/85183966fbd2b339",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/site-lb-app-Klivus/ec3da5b671bad324",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.SiteLoadBalance",
            "aws_security_group.SiteLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "SolutiListenerLB_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/soluti-lb-app-Klivus/a0097337bb314a9c/0073b73a9bf9f891",
            "certificate_arn": "arn:aws:acm:us-east-1:104689598512:certificate/7229ee05-b031-4956-ab81-44937ff21785",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/soluti-lb-target-group-3002/69c9a4f028f2328f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/soluti-lb-app-Klivus/a0097337bb314a9c/0073b73a9bf9f891",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/soluti-lb-app-Klivus/a0097337bb314a9c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.SolutiLoadBalance",
            "aws_lb_target_group.SolutiLBTargetGroup",
            "aws_security_group.SolutiLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "SolutiListenerLB_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/soluti-lb-app-Klivus/a0097337bb314a9c/11a7c0735788af2f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:listener/app/soluti-lb-app-Klivus/a0097337bb314a9c/11a7c0735788af2f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:loadbalancer/app/soluti-lb-app-Klivus/a0097337bb314a9c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.SolutiLoadBalance",
            "aws_security_group.SolutiLBGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ApiLBTargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/api-lb-target-group-3000/5a55e2647860002d",
            "arn_suffix": "targetgroup/api-lb-target-group-3000/5a55e2647860002d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/api-lb-target-group-3000/5a55e2647860002d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-lb-target-group-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "SiteLBTargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/site-lb-target-group-3001/8e71312d0e505b0f",
            "arn_suffix": "targetgroup/site-lb-target-group-3001/8e71312d0e505b0f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/site-lb-target-group-3001/8e71312d0e505b0f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "site-lb-target-group-3001",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "SolutiLBTargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/soluti-lb-target-group-3002/69c9a4f028f2328f",
            "arn_suffix": "targetgroup/soluti-lb-target-group-3002/69c9a4f028f2328f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "3002",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/soluti-lb-target-group-3002/69c9a4f028f2328f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "soluti-lb-target-group-3002",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ApiSchemaRegistryTgAttach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/api-lb-target-group-3000/5a55e2647860002d-20220504011102444600000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/api-lb-target-group-3000/5a55e2647860002d",
            "target_id": "i-0c0a618cce5463bb6"
          },
          "dependencies": [
            "aws_iam_instance_profile.readS3role",
            "aws_instance.ApiInstance",
            "aws_lb_target_group.ApiLBTargetGroup",
            "aws_security_group.AppSecurityGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC",
            "data.template_file.init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "SiteSchemaRegistryTgAttach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/site-lb-target-group-3001/8e71312d0e505b0f-20220504011052173100000005",
            "port": 3001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/site-lb-target-group-3001/8e71312d0e505b0f",
            "target_id": "i-095c0724b13c6523a"
          },
          "dependencies": [
            "aws_iam_instance_profile.readS3role",
            "aws_instance.SiteInstance",
            "aws_lb_target_group.SiteLBTargetGroup",
            "aws_security_group.AppSecurityGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC",
            "data.template_file.initSite"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "SolutiSchemaRegistryTgAttach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/soluti-lb-target-group-3002/69c9a4f028f2328f-20220504011052005300000004",
            "port": 3002,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104689598512:targetgroup/soluti-lb-target-group-3002/69c9a4f028f2328f",
            "target_id": "i-0a11edd5f7256e13f"
          },
          "dependencies": [
            "aws_iam_instance_profile.readS3role",
            "aws_instance.SolutiInstance",
            "aws_lb_target_group.SolutiLBTargetGroup",
            "aws_security_group.AppSecurityGroup",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC",
            "data.template_file.initSoluti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AppRoutePublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:route-table/rtb-0cb51603f606d0dcb",
            "id": "rtb-0cb51603f606d0dcb",
            "owner_id": "104689598512",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b25a6639c6fbc5d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-Klivus"
            },
            "tags_all": {
              "Name": "rt-public-Klivus"
            },
            "timeouts": null,
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AppGateway",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008fb1ca69f215f49",
            "route_table_id": "rtb-0cb51603f606d0dcb",
            "subnet_id": "subnet-0b75f63ae13c0d5d4"
          },
          "dependencies": [
            "aws_internet_gateway.AppGateway",
            "aws_route_table.AppRoutePublic",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beee7bccded8a680",
            "route_table_id": "rtb-0cb51603f606d0dcb",
            "subnet_id": "subnet-075c9ebe76ee485e7"
          },
          "dependencies": [
            "aws_internet_gateway.AppGateway",
            "aws_route_table.AppRoutePublic",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e365cb373dd49a86",
            "route_table_id": "rtb-0cb51603f606d0dcb",
            "subnet_id": "subnet-0fb114f75c797da55"
          },
          "dependencies": [
            "aws_internet_gateway.AppGateway",
            "aws_route_table.AppRoutePublic",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0110693f704918a07",
            "route_table_id": "rtb-0cb51603f606d0dcb",
            "subnet_id": "subnet-00375fb7819aecc3f"
          },
          "dependencies": [
            "aws_internet_gateway.AppGateway",
            "aws_route_table.AppRoutePublic",
            "aws_subnet.AppPublicSubnet",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ApiLBGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:security-group/sg-05881c78e09850d15",
            "description": "Allow HTTP and HTTPS traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05881c78e09850d15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ApiSgLoadBalance",
            "name_prefix": "",
            "owner_id": "104689598512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AppSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:security-group/sg-01118a1f98b80eb36",
            "description": "Security group app node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01118a1f98b80eb36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sg com acesso http qualquer ip",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sg com acesso https qualquer ip",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sg com acesso ssh qualquer ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgAppKlivus",
            "name_prefix": "",
            "owner_id": "104689598512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-security-group"
            },
            "tags_all": {
              "Name": "app-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AppSgDataBase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:security-group/sg-0d0b697e163abe65a",
            "description": "Security group database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0b697e163abe65a",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.81.17.87/32"
                ],
                "description": "Meu ip",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "sg-api-Klivus",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01118a1f98b80eb36"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sgDatabaseKlivus",
            "name_prefix": "",
            "owner_id": "104689598512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-database-Klivus"
            },
            "tags_all": {
              "Name": "sg-database-Klivus"
            },
            "timeouts": null,
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AppSecurityGroup",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SiteLBGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:security-group/sg-01353fb63eb3e730a",
            "description": "Allow HTTP and HTTPS traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01353fb63eb3e730a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SiteLBGroup",
            "name_prefix": "",
            "owner_id": "104689598512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SolutiLBGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:security-group/sg-03e08bccd2440f1b9",
            "description": "Allow HTTP and HTTPS traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e08bccd2440f1b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SolutiLBGroup",
            "name_prefix": "",
            "owner_id": "104689598512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AppPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:subnet/subnet-0b75f63ae13c0d5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b75f63ae13c0d5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104689598512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb-public-Klivus-us-east-1a"
            },
            "tags_all": {
              "Name": "sb-public-Klivus-us-east-1a"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:subnet/subnet-075c9ebe76ee485e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c9ebe76ee485e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104689598512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb-public-Klivus-us-east-1b"
            },
            "tags_all": {
              "Name": "sb-public-Klivus-us-east-1b"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:subnet/subnet-0fb114f75c797da55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb114f75c797da55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104689598512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb-public-Klivus-us-east-1c"
            },
            "tags_all": {
              "Name": "sb-public-Klivus-us-east-1c"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:subnet/subnet-00375fb7819aecc3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00375fb7819aecc3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104689598512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb-public-Klivus-us-east-1d"
            },
            "tags_all": {
              "Name": "sb-public-Klivus-us-east-1d"
            },
            "vpc_id": "vpc-04981c9f76b59f9dc"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AppVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104689598512:vpc/vpc-04981c9f76b59f9dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061c93cbab7725d27",
            "default_route_table_id": "rtb-0ac81eab2889dfee9",
            "default_security_group_id": "sg-0139003175cea5cca",
            "dhcp_options_id": "dopt-05eda04e0d9a4172d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04981c9f76b59f9dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac81eab2889dfee9",
            "owner_id": "104689598512",
            "tags": {
              "Name": "vpc-app-Klivus"
            },
            "tags_all": {
              "Name": "vpc-app-Klivus"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}